<resources>
    <string name="app_name">AnyDel-Backend</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="map_key">AIzaSyAJoItnqafReYqDMD_L3pCEB-YtI56vyzQ</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid Mobile/Email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Please enter correct Email/Mobile or Password"</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="otp_verification_failed">"OTP Verification failed"</string>
    <string name="fill_your_details_below_for_registration">Fill your details below for registration</string>
    <string name="name">Name :</string>
    <string name="name_hint">For example, John.</string>
    <string name="email_mobile_hint">For example, John@gmail.com or 09876543216</string>
    <string name="surname_label">Surname</string>
    <string name="surname_hint">For example, Smith etc</string>
    <string name="mobile_label">Mobile</string>
    <string name="mobile_hint">For example, 9876543216</string>
    <string name="enter_mobile_number">Enter Mobile No</string>
    <string name="email_label">Email</string>
    <string name="email_optional_label">Email (Optional) :</string>
    <string name="email_hint">For example, john.smith@gmail.com</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="already_registered_label">Already Registered? Login Here</string>
    <string name="not_received_label">Not received OTP Yet? Send it in %s seconds</string>
    <string name="login_not_registered_yer_label">Not Registered Yet! To Register: Click Here</string>
    <string name="password_label">Password</string>
    <string name="password_hint">********</string>
    <string name="otp_mobile_msg">Otp is send on your mobile number %s. Type OTP Below</string>
    <string name="otp_label">One Time Password</string>
    <string name="enter_label">Enter</string>
    <string name="clear_label">Clear</string>
    <string name="cancel_label">Cancel</string>
    <string name="email_mobile_label">Email/Mobile :</string>
    <string name="enter_your_login_details">Enter your Login Details</string>
    <string name="home_label">Home</string>
    <string name="take_action_label">Take Action</string>
    <string name="okay">Okay</string>
    <string name="call">Call</string>
    <string name="registration_success_msg">Your registration successful!. Go to Home Page to explore our services.</string>
    <string name="yay_label">Yay!</string>
    <string name="sorry_label">Sorry!</string>
    <string name="registration_failed_msg">Your registration is unsuccessful. Kindly type the correct OTP or mobile number to register.</string>
    <string name="otp_resent_failed">OTP resend failed!</string>
    <string name="login_validation_error_message">Enter Email/Mobile and Password</string>
    <string name="registration_field_validation_msg">Please give valid input</string>
    <string name="enter_valid_otp">Enter Valid OTP</string>
    <string name="service">Service</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_slot">Delivery Slot</string>
    <string name="delivery_completed">Delivery Completed</string>
    <string name="completed_delivery">Completed Delivery</string>
    <string name="cancelled_delivery">Cancelled Delivery</string>
    <string name="service_history">Service History</string>
    <string name="my_address">My Addresses</string>
    <string name="my_balance">My Balance</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="welcome_msg">"Dear %1$s,\n%2$s! Welcome to AnyDel"</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="about_us">About Us</string>
    <string name="notification">Notification</string>
    <string name="logout_label">Logout</string>
    <string name="remove_address_label">Remove Address</string>
    <string name="remove_address_description_label">Do you want to remove address from the list?</string>
    <string name="this_is_your_profile_you_can_edit_profile_below">This is your profile. You can edit profile below</string>
    <string name="session_expired_title">Session Expired</string>
    <string name="session_timeout_msg">Session timeout</string>
    <string name="something_went_wrong_msg">Something went wrong please try again!</string>
    <string name="session_expired_default_message">Your session is expired. please sign in again to continue.</string>
    <string name="add_new_address_to_list">Add new Address to list</string>
    <string name="add_new_address">Add new Address</string>
    <string name="fill_details_of_new_address_here">Fill details of new address here !</string>
    <string name="address_name">Address Name</string>
    <string name="address_contact">Address Contact</string>
    <string name="contact_us">Contact Us</string>
    <string name="address_name_hint">For example - My Home, XYZ super shop</string>
    <string name="house_number_house_name">House Number/ House Name</string>
    <string name="house_number_hint">Shri Niwas or Plot No- 103-04</string>
    <string name="area_label">Area</string>
    <string name="area_hint">XYZ nagar</string>
    <string name="landmark_label">Landmark</string>
    <string name="landmark_hint">Near RTO Office</string>
    <string name="road_label">Road</string>
    <string name="road_hint">Old XYZ road</string>
    <string name="city_label">City</string>
    <string name="cities_label">Cities</string>
    <string name="package_status_label">Package Status</string>
    <string name="city_hint">Mumbai</string>
    <string name="pin_label">Pin</string>
    <string name="pin_hint">424111</string>
    <string name="add_label">Add</string>
    <string name="selected_address_details">Selected address details :</string>
    <string name="state_label">State</string>
    <string name="country_label">Country</string>
    <string name="country_hint">For example - India</string>
    <string name="state_hint">For Example - Maharastra</string>
    <string name="edit_label">Edit</string>
    <string name="save_label">SAVE</string>
    <string name="title_activity_main_map">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="long_press_marker">Long Press MArker</string>
    <string name="permission_denied">Permission denied</string>
    <string name="gps_denied">GPS Denied</string>
    <string name="title_activity_add_map_address">AddMapAddressActivity</string>
    <string name="add_location">Add Location</string>
    <string name="update">Update</string>
    <string name="getting_started_here">Getting started is easy!</string>
    <string name="get_your_package_delivered_by_us_you_can_book_your_package_delivery_here">Get your package delivered by us | You can book your package delivery here -</string>
    <string name="customer_mobile_no_label">Customer No</string>
    <string name="customer_name_label">Customer Name</string>
    <string name="pick_up_address">Pick-Up Address</string>
    <string name="drop_off_Address">Drop-Off Address</string>
    <string name="pick_up_contact_no">Pick-Up Contact No :</string>
    <string name="drop_off_contact_no">Drop-Off Contact No :</string>
    <string name="choose_address_from_where_you_want_us_to_pick_package">Choose address from where you want us to pick package!</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="select_label">Select</string>
    <string name="package_type">Package Type</string>
    <string name="parcel_description">Parcel Description / List</string>
    <string name="package_hint">For example medicine, grocery etc</string>
    <string name="parcel_description_hint">For example medicine, grocery etc</string>
    <string name="rejected_reason_label">Rejected Reason</string>
    <string name="comment">Comment</string>
    <string name="comment_hint">Comment If any</string>
    <string name="upload_item">Upload</string>
    <string name="upload_item_list_files">Upload Item List Files</string>
    <string name="note_you_can_write_down_item_list_on_paper_and_upload_it_here">Note: You can write down item list on paper and upload it here</string>
    <string name="package_extra_weight_desc">In case of package weight or size is more than our standard range. Kindly let us know we can still manage!</string>
    <string name="kg_label">KG</string>
    <string name="cm_label">CM*</string>
    <string name="l_label">L</string>
    <string name="b_label">B</string>
    <string name="h_label">H</string>
    <string name="package_size">Package Size</string>
    <string name="dimen_note_warning">Note: You can leave above box blank when package weight and size is under the range. Delivery charges will be changed for increased size and weight</string>
    <string name="slot_and_delivery_time_title">Select delivery time as per your preference !</string>
    <string name="payment_mode_title">Select payment mode as per your preference !</string>
    <string name="select_date_and_time_label">Select Date &amp; Time</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="standard_delivery_charges_label">Standard delivery charges : </string>
    <string name="coupon_code_label">Coupon Code : </string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="set_time">Set Time</string>
    <string name="medicine">Medicine</string>
    <string name="grocery">Grocery</string>
    <string name="document">Document</string>
    <string name="food">Food</string>
    <string name="gift">Gift</string>
    <string name="flower">Flower</string>
    <string name="cake">Cake</string>
    <string name="other">Other</string>
    <string name="maximum_image_size_crossed_message">Image size should not be more than 2 MB</string>
    <string name="package_weight">Package Weight</string>
    <string name="thank_you_label">Thank You !</string>
    <string name="ohh_label">Ohh !</string>
    <string name="package_failed_label">Your request failed please try again!</string>
    <string name="booking_success_label">Booking of your package delivery has been confirm !</string>
    <string name="pay_cash_at_home">Pay by cash</string>
    <string name="swipe_card_at_home">Swipe Card</string>
    <string name="online_payment">Online Payment</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="package_delivery_details">Package Delivery Details</string>
    <string name="track_your_package">Track your Package</string>
    <string name="please_find_the_below_details_about_your_package">Please find the below details about your package</string>
    <string name="package_id">Package ID</string>
    <string name="assigned_to_label">Assigned To</string>
    <string name="assigned_by_label">Assigned By</string>
    <string name="package_type_label">Package Type</string>
    <string name="package_desc_label">Package Desc</string>
    <string name="delivery_date_label">Delivery Date</string>
    <string name="delivery_time_label">Delivery Time</string>
</resources>