<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParentWrapContent"
    android:padding="@dimen/dimen_16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_packageInfo_weightDescription"
        style="@style/ConstraintWrapStyle"
        android:text="@string/package_extra_weight_desc"
        android:textColor="@color/text_primary_color"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_packageInfo_pickWeightLabel"
        style="@style/ConstraintWrapStyle"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/package_weight"
        android:textColor="@color/text_primary_color"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_packageInfo_weightDescription" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_packageInfo_pickWeightField"
        style="@style/EditTextStyleWithRound"
        android:layout_width="@dimen/dimen_80dp"
        android:layout_height="@dimen/dimen_30dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="3"
        android:padding="@dimen/dimen_0dp"
        android:text="15"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_packageInfo_weightDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_packageInfo_kgLabel"
        style="@style/ConstraintWrapStyle"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:paddingTop="@dimen/dimen_8dp"
        android:paddingBottom="@dimen/dimen_8dp"
        android:text="@string/kg_label"
        android:textAllCaps="true"
        android:textColor="@color/text_primary_color"
        android:textSize="@dimen/dimen_12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/edt_packageInfo_pickWeightField"
        app:layout_constraintTop_toBottomOf="@+id/tv_packageInfo_weightDescription" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_packageInfo_pickSizeLabel"
        style="@style/ConstraintWrapStyle"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/package_size"
        android:textColor="@color/text_primary_color"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_packageInfo_pickWeightField" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_packageInfo_lengthField"
        style="@style/EditTextStyleWithRound"
        android:layout_width="@dimen/dimen_40dp"
        android:layout_height="@dimen/dimen_30dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:gravity="center"
        android:hint="@string/l_label"
        android:inputType="number"
        android:maxLength="2"
        android:padding="@dimen/dimen_0dp"
        android:text="45"
        app:layout_constraintStart_toEndOf="@+id/tv_packageInfo_pickWeightLabel"
        app:layout_constraintTop_toBottomOf="@+id/edt_packageInfo_pickWeightField" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_packageInfo_lengthCMLabel"
        style="@style/ConstraintWrapStyle"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:layout_marginTop="@dimen/dimen_28dp"
        android:text="@string/cm_label"
        android:textAllCaps="true"
        android:textColor="@color/text_primary_color"
        android:textSize="@dimen/dimen_12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/edt_packageInfo_lengthField"
        app:layout_constraintTop_toBottomOf="@+id/edt_packageInfo_pickWeightField" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_packageInfo_breadthField"
        style="@style/EditTextStyleWithRound"
        android:layout_width="@dimen/dimen_40dp"
        android:layout_height="@dimen/dimen_30dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:gravity="center"
        android:hint="@string/b_label"
        android:inputType="number"
        android:maxLength="2"
        android:padding="@dimen/dimen_0dp"
        android:text="45"
        app:layout_constraintEnd_toStartOf="@+id/edt_packageInfo_heightField"
        app:layout_constraintStart_toEndOf="@+id/edt_packageInfo_lengthField"
        app:layout_constraintTop_toBottomOf="@+id/edt_packageInfo_pickWeightField" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_packageInfo_breadthCMLabel"
        style="@style/ConstraintWrapStyle"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:layout_marginTop="@dimen/dimen_28dp"
        android:text="@string/cm_label"
        android:textAllCaps="true"
        android:textColor="@color/text_primary_color"
        android:textSize="@dimen/dimen_12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/edt_packageInfo_breadthField"
        app:layout_constraintTop_toBottomOf="@+id/edt_packageInfo_pickWeightField" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_packageInfo_heightField"
        style="@style/EditTextStyleWithRound"
        android:layout_width="@dimen/dimen_40dp"
        android:layout_height="@dimen/dimen_30dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:gravity="center"
        android:hint="@string/h_label"
        android:inputType="number"
        android:maxLength="2"
        android:padding="@dimen/dimen_0dp"
        android:text="45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edt_packageInfo_breadthField"
        app:layout_constraintTop_toBottomOf="@+id/edt_packageInfo_pickWeightField" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_packageInfo_widthCMLabel"
        style="@style/ConstraintWrapStyle"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:layout_marginTop="@dimen/dimen_28dp"
        android:text="@string/cm_label"
        android:textAllCaps="true"
        android:textColor="@color/text_primary_color"
        android:textSize="@dimen/dimen_12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/edt_packageInfo_heightField"
        app:layout_constraintTop_toBottomOf="@+id/edt_packageInfo_pickWeightField" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_packageInfo_update"
        style="@style/ConstraintWrapStyle"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:layout_marginTop="@dimen/dimen_28dp"
        android:text="@string/update"
        android:background="@drawable/btn_custom_bg_drawable"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_packageInfo_pickSizeLabel" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_packageInfo_dimenNote"
        style="@style/ConstraintWrapStyle"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:layout_marginTop="@dimen/dimen_28dp"
        android:text="@string/dimen_note_warning"
        android:textColor="@color/red"
        android:textSize="@dimen/dimen_12sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_packageInfo_pickSizeLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>