<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchParent">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/MatchParent"
        android:paddingStart="@dimen/dimen_16dp"
        android:paddingTop="@dimen/dimen_16dp"
        android:paddingEnd="@dimen/dimen_16dp"
        android:paddingBottom="@dimen/dimen_8dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tv_profileScreen_appLogo"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_60dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_app_anydel_backend_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profileScreen_Label"
            style="@style/ConstraintWrapStyle"
            android:gravity="center"
            android:padding="@dimen/dimen_8dp"
            android:shadowColor="@color/secondary_color"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="4"
            android:text="@string/my_profile"
            android:textAllCaps="true"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileScreen_appLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profileScreen_description"
            style="@style/ConstraintWrapStyle"
            android:gravity="center"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/this_is_your_profile_you_can_edit_profile_below"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileScreen_Label" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_profileScreen_imageContainer"
            style="@style/ConstraintWrapStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileScreen_description">

            <View
                android:id="@+id/view_profileScreen_rightView"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="@dimen/dimen_5dp"
                android:background="@color/secondary_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_profileScreen_userImageBg"
                android:layout_width="@dimen/dimen_90dp"
                android:layout_height="@dimen/dimen_90dp"
                android:background="@drawable/user_picture_circular_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_profileV5Header_userImage"
                android:layout_width="@dimen/dimen_80dp"
                android:layout_height="@dimen/dimen_80dp"
                android:src="@drawable/ic_default_user"
                app:layout_constraintBottom_toBottomOf="@+id/view_profileScreen_userImageBg"
                app:layout_constraintEnd_toEndOf="@+id/view_profileScreen_userImageBg"
                app:layout_constraintStart_toStartOf="@+id/view_profileScreen_userImageBg"
                app:layout_constraintTop_toTopOf="@+id/view_profileScreen_userImageBg" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profileScreen_nameLabel"
            style="@style/ConstraintWrapStyle"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_profileScreen_imageContainer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profileScreen_nameField"
            style="@style/ConstraintWrapStyle"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/name"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/cl_profileScreen_imageContainer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profileScreen_surLabel"
            style="@style/ConstraintWrapStyle"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/surname_label"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileScreen_nameLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profileScreen_surField"
            style="@style/ConstraintWrapStyle"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/surname_label"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileScreen_nameLabel" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profileScreen_mobileLabel"
            style="@style/ConstraintWrapStyle"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/mobile_label"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/tv_profileScreen_nameField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileScreen_surLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profileScreen_mobileField"
            style="@style/ConstraintWrapStyle"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/mobile_label"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/dimen_16sp"
            android:gravity="start"
            android:background="@android:color/transparent"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileScreen_surLabel" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profileScreen_emailLabel"
            style="@style/ConstraintWrapStyle"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/email_label"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileScreen_mobileLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profileScreen_emailField"
            style="@style/ConstraintWrapStyle"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/email_label"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/dimen_16sp"
            android:gravity="start"
            android:background="@android:color/transparent"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileScreen_mobileLabel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_profileScreen_home"
            style="@style/ConstraintWrapStyle"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:background="@drawable/btn_background_drawable"
            android:text="@string/home_label"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileScreen_emailField"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>